[tool.poetry]
name = "renovate-poetry-bug"
version = "0.1.0"
description = ""
authors = ["Nicolas Braem <nicolas.braem@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
requests = "2.25.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=1.1.2", "setuptools", "poetry-dynamic-versioning"]
build-backend = "poetry.masonry.api"
